--- a/package.json
+++ b/package.json
@@ -1,14 +1,63 @@
 {
   "name": "poi-plugin-senka-calc",
   "version": "4.4.2",
-  "description": "senka calculator for poi",
+  "description": "Ranking point calculator for poi",
   "main": "index.js",
   "dependencies": {
-    "lodash": "^4.17.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@blueprintjs/core": "^3.51.1",
+    "@blueprintjs/datetime": "^4.3.9",
+    "@blueprintjs/icons": "^3.30.2",
+    "@blueprintjs/popover2": "^1.6.3",
+    "@blueprintjs/select": "^4.6.3",
+    "@types/fs-extra": "^9.0.13",
+    "@types/glob": "^7.1.4",
+    "@types/i18next": "^13.0.0",
+    "@types/iconv-lite": "0.0.1",
+    "@types/lodash": "^4.14.175",
+    "@types/moment-timezone": "^0.5.30",
+    "@types/node": "^17.0.0",
+    "@types/react": "^17.0.30",
+    "@types/react-day-picker": "^5.3.0",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-i18next": "^8.1.0",
+    "@types/react-redux": "^7.1.19",
+    "@types/redux": "^3.6.31",
+    "@types/reselect": "^2.2.0",
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "electron": "^16.0.4",
+    "eslint": "^8.4.1",
+    "eslint-config-poi-plugin": "^3.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-react": "^7.27.1",
+    "kcsapi": "^1.191214.0",
+    "path-extra": "^4.3.0",
+    "poi-util-transpile": "^11.0.0",
+    "prettier": "^2.5.1",
+    "react-day-picker": "^7.4.10",
+    "redux-observers": "^2.1.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "typescript": "^4.5.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "win-publish": "npm publish",
+    "win-prerelease": "npm publish --tag beta",
+    "prepack": "poi-util-transpile --sm --replace",
+    "postpublish": "npm run reset",
+    "reset": "git checkout . && git clean -f",
+    "compile": "cjsx -cb .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:js": "eslint . --ext .ts --ext .tsx --ignore-path .eslintignore",
+    "lint:css": "stylelint assets/**/*.css --config .stylelintrc.js",
+    "lint:styled": "stylelint views/**/*.tsx --config .stylelintrc.js",
+    "lint": "npm run lint:js && npm run lint:css && npm run lint:styled"
   },
   "repository": {
     "type": "git",
@@ -32,10 +81,10 @@
   },
   "homepage": "https://github.com/ruiii/plugin-Hairstrength#readme",
   "poiPlugin": {
-    "title": "Senka Calc",
-    "description": "Senka calculator",
-    "icon": "fa/child",
-    "priority": 7,
+    "title": "Ranking Calc",
+    "description": "Ranking point calculator",
+    "icon": "fa/line-chart",
+    "priority": 99,
     "apiVer": {
       "6.99.99": "2.3.0",
       "7.4.1": "4.2.2"
