--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "poi-plugin-senka-calc",
-  "version": "4.4.2",
+  "version": "5.0.0",
   "description": "Ranking point calculator for poi",
   "main": "index.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@blueprintjs/core": "^3.51.1",
     "@blueprintjs/datetime": "^4.3.9",
